<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forms.FormularioUsuarioMainActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/form_nome"
        android:hint="@string/nome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorHint"
        android:theme="@style/MyEditTextStyle2"
        />

    <EditText
        android:id="@+id/form_login"
        android:hint="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorHint"
        android:theme="@style/MyEditTextStyle2"
        />

    <EditText
        android:id="@+id/form_senha"
        android:hint="@string/senha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorHint"
        android:theme="@style/MyEditTextStyle2"
        />

    <EditText
        android:id="@+id/form_tipo_usuario_id"
        android:hint="@string/tipo_usuario_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorHint"
        android:theme="@style/MyEditTextStyle2"
        />

    <EditText
        android:id="@+id/form_ativo"
        android:hint="@string/ativo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/colorHint"
        android:theme="@style/MyEditTextStyle2"
        />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <Button
            android:id="@+id/salvar"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:drawableLeft="@drawable/check"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:paddingLeft="20px"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/fundobotao"
            />
    </RelativeLayout>
</LinearLayout>